# slsk-rs

./: Cargo.toml  LICENSE  README.md
crates/slsk/: Cargo.toml  README.md
crates/slsk-protocol/: Cargo.toml  README.md
crates/slsk-protocol/examples/: simple.rs
crates/slsk-protocol/src/: codec.rs  connection.rs  distributed.rs  error.rs  file.rs  lib.rs  peer.rs  peer_init.rs  server.rs  shared_files.rs  types.rs
crates/slsk/src/: app.rs  events.rs  main.rs  network.rs  ui.rs
